Fix several layout issues and fix up the > 480 query layout.

--- a/css/main.css
+++ b/css/main.css
@@ -152,10 +152,6 @@ nav a.selected {
     padding: 0px 5% 10px;
 }
 
-.push-header {
-    height: 5em;
-}
-
 .push-footer {
     height: 3em;
 }
@@ -172,7 +168,7 @@ nav a.selected {
     color: #fff;
     font-weight: normal;
     display: inline-block;
-    margin-top: 0.6em;
+    margin: 0.75em 0 0;
 }
 
 .social-icons {
@@ -234,11 +230,10 @@ nav a.selected {
 
     nav a {
         float: left;
-        width: 12%;
         margin: 0 0.1em;
-        padding: 10px 2%;
+        padding: 10px 5px;
         margin-bottom: 0;
-        margin-top: 5%;
+        margin-top: 0;
     }
 
     nav li:first-child a {
@@ -260,18 +255,37 @@ nav a.selected {
     .oldie nav a {
         margin: 0 0.7%;
     }
-}
-
-@media only screen and (min-width: 768px) {
 
 /* ====================
     WIDE: Fixed Header
    ==================== */
 
+    .push-header {
+        height: 7.2em;
+    }
+
     .header-container {
         position: fixed;
         width: 100%;
+        height: 7.2em;
         top: 0;
+    }
+
+    .main-container {
+        min-height: 100%;
+        margin: 0 auto -3em;
+        height: auto;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+
+    .push-header {
+        height: 4.5em;
+    }
+
+    .header-container {
+        height: 4.5em;
     }
 
     .main-container {
@@ -302,6 +316,10 @@ nav a.selected {
     nav {
         float: right;
         width: 50%;
+    }
+
+    nav a {
+        margin-top: 1.6em;
     }
 
 /* ============
